src/AIS/AIS_Animation.cxx
@@ -251,7 +251,9 @@ void AIS_Animation::Stop()
   myState = AnimationState_Stopped;
   if (!myTimer.IsNull())
   {
+    const Standard_Real anElapsedTime = ElapsedTime();
     myTimer->Stop();
+    myTimer->Seek (Min (Duration(), anElapsedTime));
   }
 
   for (NCollection_Sequence<Handle(AIS_Animation)>::Iterator anIter (myAnimations); anIter.More(); anIter.Next())
